--- a/bimxt.plist
+++ b/bimxt.plist
@@ -1,32 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>items</key>
-        <array>
-            <dict>
-                <key>assets</key>
-                <array>
-                    <dict>
-                        <key>kind</key>
-                        <string>software-package</string>
-                        <key>url</key>
-                        <string>
-                            https://ulovebin.github.io/bimceshi/bim.ipa
-                        </string>
-                    </dict>
-                </array>
-                <key>metadata</key>
-                <dict>
-                    <key>bundle-identifier</key>
-                    <string>com.qmap.MTBIMMCM</string>
-                    <key>bundle-version</key>
-                    <string>1.0</string>
-                    <key>kind</key>
-                    <string>software</string>
-                    <key>title</key>
-                    <string>BIM协同管理</string>
-                </dict>
-            </dict>
-        </array>
-    </dict>
+<dict>
+	<key>compileBitcode</key>
+	<false/>
+	<key>iCloudContainerEnvironment</key>
+	<string>Production</string>
+	<key>manifest</key>
+	<dict>
+		<key>appURL</key>
+		<string>https://ulovebin.github.io/bimceshi/bim.ipa</string>
+		<key>displayImageURL</key>
+		<string>https://ulovebin.github.io/bimceshi/bim.png</string>
+		<key>fullSizeImageURL</key>
+		<string>https://ulovebin.github.io/bimceshi/bimFull.png</string>
+	</dict>
+	<key>method</key>
+	<string>enterprise</string>
+	<key>signingStyle</key>
+	<string>automatic</string>
+	<key>stripSwiftSymbols</key>
+	<true/>
+	<key>teamID</key>
+	<string>UJFTW68L2Z</string>
+	<key>thinning</key>
+	<string>&lt;none&gt;</string>
+</dict>
 </plist>
-
